Added notifications base
